# llhd

./: .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  ASSEMBLY.md  CHANGELOG.md  CLKCNT.vhd  CMakeLists.txt  Cargo.toml  Doxyfile.in  LAGCE.vhd  LANGUAGE.md  LICENSE  README.md  ROADMAP.md  TODO.md  llhd.sublime-syntax  sample.vhd
doc/: LANGUAGE.md  grammar.txt  isa.toml  llhd.sublime-syntax  llhd.tmPreferences
doc/doxygen/: Doxyfile
doc/sphinx/: Makefile  conf.py  index.rst  make.bat
doc/standards/: index.md
doc/sublime/: LLHD.JSON-tmLanguage  LLHD.tmLanguage
docs/: Makefile  conf.py  index.rst  inst.rst  ir.rst  language.rst  map-vhdl.rst
examples/: builder.rs  entity_instance.rs  estimate_bc.rs  function_call.rs  gir.rs  module.rs  reader.rs
exp/: CMakeLists.txt  vm.cpp
include/: llhd.h  value_kind_unified.h
include/llhd/: common.hpp  config.hpp  location.hpp  types.hpp
include/llhdc/: common.h  funclist.txt  instruction.h  interface.md  ir.h
llhd/: Assembly.hpp  AssemblyLexer.cpp  AssemblyLexer.hpp  AssemblyParser.cpp  AssemblyParser.hpp  AssemblyWriter.cpp  AssemblyWriter.hpp  Buffer.hpp  CMakeLists.txt  Diagnostic.hpp  Diagnostic.md  DiagnosticContext.hpp  DiagnosticFormatterConsole.cpp  DiagnosticFormatterConsole.hpp  DiagnosticMessage.hpp  FileManager.cpp  FileManager.hpp  MallocAllocator.hpp  ManagedDeallocations.hpp  MemoryPool.hpp  NullTerminatedIterator.hpp  SourceBuffer.hpp  SourceLocation.cpp  SourceLocation.hpp  SourceManager-internal.hpp  SourceManager.cpp  SourceManager.hpp  SourceManagerEntry.cpp  SourceManagerEntry.hpp  SourceRangeSet.hpp  Token.hpp  TokenBuffer.hpp  TokenContext.hpp  TokenScanner.hpp  Tokenizer.cpp  Tokenizer.hpp  VhdlParser.hpp  compiler.hpp  config.hpp.in  console.cpp  (+11 more)
llhd/allocator/: Allocator.hpp  MallocAllocator.hpp  PoolAllocator.hpp
llhd/diagnostic/: Diagnostic.hpp  DiagnosticBuilder.hpp  DiagnosticContext.hpp  DiagnosticFormatterConsole.cpp  DiagnosticFormatterConsole.hpp  DiagnosticMessage.hpp
llhd/sim/: Simulation.cpp  Simulation.hpp  SimulationDependency.hpp  SimulationEvent.hpp  SimulationExpr.hpp  SimulationSignal.hpp  SimulationTime.hpp  SimulationValue.hpp
llhd/test/: diagnostics.cpp  sourcemanager.cpp  sourcerangeset.cpp
llhd/unicode/: CMakeLists.txt  casefolding-internal.hpp  casefolding.cpp  casefolding.hpp  gen-casefolding.cpp  namespace.dox  tblgen-casefolding.cpp  unichar.hpp  utf.hpp
llhd/unicode/test/: casefolding.cpp
llhd/vhdl/: CMakeLists.txt  KeywordMapper.hpp  Lexer.cpp  Lexer.hpp  LexerNovum.cpp  LexerNovum.hpp  Parser-first.cpp  Parser-names.cpp  Parser-private.hpp  Parser-second.cpp  Parser-subprogs.cpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp  TokenBuffer.hpp  TokenContext.hpp  TokenGroup.hpp  TokenType.hpp  keywords.dox  keywords.hpp  namespace.dox  tblgen-keywords.cpp
llhd/vhdl/ast/: Context.hpp  DesignFile.hpp
llhd/vhdl/test/: arbiter.vhd  lexer-broken1.vhd  lexer.cpp  lexer.vhd  parser.cpp
llhd/vhdl/test/lexer/: basic.vhd  keywords.vhd  literals.vhd
llhd/vhdl/test/parser/: arbiter.vhd
scripts/: check-copyrights.sh  doc-upload.sh  test.py
src/: aggregate.rs  argument.rs  assembly.rs  block.rs  config.cpp.in  config.hpp.in  debug.cpp  entity.rs  function.rs  inst.rs  konst.rs  lib.rs  module.rs  process.rs  range.hpp  seq_body.rs  table.rs  ty.rs  unit.rs  util.rs  value.rs  verifier.rs  visit.rs
src-c/: apint.c  asm-writer.c  boolexpr.c  boolexpr.h  common.c  debug1.c  debug2.c  debug3.c  debug4.c  desequentialize.c  inst.c  inst.h  linker.c  module.c  module.h  opt-cbre.c  opt-cf.c  opt-ubd.c  type.c  util.c  util.h  value.c  value.h
src-cold/: ir-type.c  ir-unit.c  ir.c
src/analysis/: domtree.rs  mod.rs  preds.rs  trg.rs
src/assembly/: assembly.dox  ast.rs  grammar.lalrpop  grammar.rs  irwriter.rs  lexer.cpp  lexer.hpp  mod.rs  module.hpp  process.hpp  reader.cpp  reader.rs  value.hpp  writer.rs
src/diagnostic/: console_diagnostic_printer.cpp  console_diagnostic_printer.hpp  diagnostic.cpp  diagnostic.dox  diagnostic.hpp  source_layout.cpp  source_layout.hpp
src/ir/: argument.cpp  basicblock.cpp  cfg.rs  constant.cpp  constants.cpp  context.cpp  dfg.rs  entity.cpp  entity.rs  function.rs  inst.rs  instruction.cpp  instructions.cpp  layout.rs  mod.rs  module.cpp  module.rs  prelude.rs  process.rs  (+8 more)
test/: CMakeLists.txt  asm-lexer.cpp  asm-parser.cpp  comments.llhd  const_folding.llhd  dev.cpp  dummy.llhd  main.cpp  moore_counter.llhd  opt_0001_mux.llhd  opt_0004_drv_coalesce.llhd  opt_5.llhd  opt_deseq_3.llhd  opt_deseq_4.llhd  opt_proclower_3.llhd  opt_proclower_4.llhd  perf_0001_gcse_bad.llhd  perf_0002_gcse_good.llhd  regr_0100_complex.llhd  regr_opt_0001_dce.llhd
test/asm/: counter.llhd  fulladder.llhd  halfadder.llhd
test/assembly/: lexer.cpp
test/opt/cf/: arith.llhd  ext.llhd  shift.llhd
test/opt/deseq/: ff.llhd  ff_gated.llhd  ff_reset_async.llhd  ff_reset_sync.llhd
test/opt/proclower/: empty_with_inputs.llhd  empty_without.llhd  simple.llhd
test/regr/: iss138_cf_ty_mismatch.llhd  iss143_entity_suspend.llhd  iss145_moore_reg.llhd  iss145_moore_reg_minimal.llhd
test/unicode/: casefolding.cpp
test/verilog/: empty.llhd  empty_entity.llhd  empty_func.llhd  empty_proc.llhd  funny_name.llhd  ports_both.llhd  ports_inputs.llhd  ports_outputs.llhd  signal_const.llhd
tests/: assembly.rs  block_labels.llhd  const_folding.llhd  constfold.llhd  construct_graph.rs  counter.llhd  domtree_0001.llhd  huge_comb.llhd  ir.rs  iss21_inst_names.rs  iss30_temp_names.rs  iss31_and_inst.rs  iss44_dot_in_name.rs  moore_counter.llhd  opt_0001_mux.llhd  opt_0002_drv_comb.llhd  opt_0003_drv_latch.llhd  opt_0005_drv_coalesce.llhd  opt_1.llhd  opt_2.llhd  opt_3.llhd  opt_4.llhd  opt_deseq_1.llhd  opt_deseq_2.llhd  opt_deseq_3.llhd  opt_deseq_5.llhd  opt_proclower_1.llhd  opt_proclower_2.llhd  opt_proclower_5.llhd  perf_0001_gcse_bad.llhd  perf_0002_gcse_good.llhd  regr1_tmpname_branch.rs  regr_0100_complex.llhd  regr_0100_simple.llhd  regr_opt_0001_dce.llhd  regr_opt_0002_dce.llhd  regr_opt_0003_always_ff.llhd  trg.llhd  verify.llhd  verify_0002.llhd
(+98 files in other folders)
