[package]
name = "llhd"
version = "0.14.0-dev"
authors = ["Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
edition = "2018"

description = "A Low Level Hardware Description that acts as a foundation for building hardware design tools."
repository = "https://github.com/fabianschuiki/llhd"
readme = "README.md"
license = "Apache-2.0 OR MIT"
homepage = "http://llhd.io/"

[badges]
travis-ci = { repository = "fabianschuiki/llhd", branch = "master" }

[dependencies]
anyhow = "1.0"
bitflags = "1"
clap = "2"
hibitset = "0.6"
itertools = "0.9"
lalrpop-util = "0.18.1"
log = { version = "0.4", features = ["release_max_level_info"] }
num = { version = "0.2", features = ["serde"] }
rayon = "1.3"
regex = "0.2.0"
serde = { version = "1", features = ["derive", "rc"] }
pretty_env_logger = "0.4"
time = "0.1"

[dev-dependencies]
indoc = "0.3"

[profile.release]
debug = true
